// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.29.0

package db

import (
	"database/sql"
	"time"
)

type Comment struct {
	ID        int32
	PostID    int32
	UserID    int32
	Content   string
	CreatedAt time.Time
}

type Notification struct {
	ID        int32
	UserID    int32
	Type      string
	Message   string
	RelatedID int32
	IsRead    bool
	CreatedAt time.Time
}

type Post struct {
	ID        int32
	UserID    int32
	Title     string
	Content   string
	Image     sql.NullString
	CreatedAt time.Time
	UpdatedAt time.Time
}

type Profile struct {
	ID        int32
	UserID    int32
	Bio       string
	AvatarUrl string
	CreatedAt time.Time
	UpdatedAt time.Time
}

type User struct {
	ID        int32
	Username  string
	Email     string
	Password  string
	CreatedAt time.Time
	UpdatedAt time.Time
}
